fix: map too big with a large screen

--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -1,5 +1,8 @@
 svg.map {
   border-radius: 4px;
+  max-width: 700px;
+  margin: auto;
+  display: block;
 
   .clickable {
     cursor: pointer;
